easy-Dep-Ing-Ser/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web-container
          image: local:davtroweb
          ports:
            - name: http
              containerPort: 8080
