easy-Dep-Ing-Ser/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
